[package]
name = "maxmind-geoip-api"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.7.0"
bzip2 = "0.4.4"
chrono = "0.4.38"
env_logger = "0.11.3"
file-format = "0.25.0"
flate2 = "1.0.30"
log = "0.4.21"
maxminddb = { version = "0.24.0", features = ["mmap"], git = "https://github.com/oschwald/maxminddb-rust.git" }
reqwest = { version = "0.12.5", features = ["stream", "rustls-tls"], default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tar = "0.4.41"
timeago = "0.4.2"
tokio = { version = "1.38.0", features = ["full", "macros"] }
xz2 = "0.1.7"
zip = "2.1.3"
zstd = "0.13.1"

[profile.release]
strip = true

[profile.release-build]
inherits = "release"
opt-level = "z"
strip = true
debug = false
lto = true
codegen-units = 1

[profile.debug-build]
inherits = "release"
opt-level = "z"
strip = false
debug = true
lto = true
codegen-units = 1
