[package]
name = "maxmind-geoip-api"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
bzip2 = "0.5.2"
chrono = "0.4.40"
env_logger = "0.11.6"
file-format = "0.26.0"
flate2 = "1.1.0"
log = "0.4.26"
maxminddb = { version = "0.25.0", features = ["mmap"] }
reqwest = { version = "0.12.12", features = ["stream", "rustls-tls"], default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
timeago = "0.4.2"
tokio = { version = "1.44.0", features = ["full", "macros"] }
xz2 = "0.1.7"
zip = "2.2.3"
zstd = "0.13.3"

[profile.release]
strip = true

[profile.release-build]
inherits = "release"
opt-level = "z"
strip = true
debug = false
lto = true
codegen-units = 1

[profile.debug-build]
inherits = "release"
opt-level = "z"
strip = false
debug = true
lto = true
codegen-units = 1
